--- a/Imagenes hitopatologicas/generar_matrices_confusión.ipynb
+++ b/Imagenes hitopatologicas/generar_matrices_confusión.ipynb
@@ -27,7 +27,7 @@
         "      [4, 5]]\n",
         "\n",
         "# Definir los nombres de las clases\n",
-        "clases = ['BT', 'MT']\n",
+        "clases = ['LIHC', 'CHOL']\n",
         "\n",
         "# Crear la matriz de confusión como DataFrame\n",
         "df_cm = pd.DataFrame(cm, columns=clases, index=clases)\n",
